Minor updates to cell notations

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -1901,6 +1901,8 @@
         "                                'output_attrition': y_atrn_ohe_test\n",
         "                              }\n",
         "                             )\n",
+        "\n",
+        "# Displaying the results\n",
         "test_results"
       ]
     },
